--- a/test.html
+++ b/test.html
@@ -2,45 +2,21 @@
 <html>
 <head>
 <script>
-function showCustomer(str)
-{
-if (str=="")
-  {
-  document.getElementById("txtHint").innerHTML="";
-  return;
-  }  
-if (window.XMLHttpRequest)
-  {// code for IE7+, Firefox, Chrome, Opera, Safari
-  xmlhttp=new XMLHttpRequest();
+
+var xhr = new XMLHttpRequest();
+xhr.open("GET", "http://api.example.com/data.json", true);
+xhr.onreadystatechange = function() {
+  if (xhr.readyState == 4) {
+    // innerText does not let the attacker inject HTML elements.
+    document.getElementById("resp").innerText = xhr.responseText;
   }
-else
-  {// code for IE6, IE5
-  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
-  }
-xmlhttp.onreadystatechange=function()
-  {
-  if (xmlhttp.readyState==4 && xmlhttp.status==200)
-    {
-    document.getElementById("txtHint").innerHTML=xmlhttp.responseText;
-    }
-  }
-xmlhttp.open("GET","getcustomer.asp?q="+str,true);
-xmlhttp.send();
 }
+xhr.send();
 </script>
 </head>
 <body>
 
-<form action=""> 
-<select name="customers" onchange="showCustomer(this.value)">
-<option value="">Select a customer:</option>
-<option value="ALFKI">Alfreds Futterkiste</option>
-<option value="NORTS ">North/South</option>
-<option value="WOLZA">Wolski Zajazd</option>
-</select>
-</form>
-<br>
-<div id="txtHint">Customer info will be listed here...</div>
+
 
 </body>
 </html>
