url change test

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@ if (request == null){
         alert("Unable to create request");
     }else{
 
-        var url = "http://www.ldoceonline.com/dictionary/manga";
+        var url = "http://www.yelp.com";
 
         request.onreadystatechange = function()
             {
@@ -48,6 +48,7 @@ setInterval(function() {
   );
 }, 500);
 </script>
+
 </head>
 <body>
 
