add js file paths and spinner function skeleton

--- a/react-0.11.1/index.html
+++ b/react-0.11.1/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
     <title>yelp info</title>
-    <link rel="stylesheet" href="../shared/css/base.css" />
   </head>
   <body>
     <h1>HELLO</h1>
+    <p>hello</p>
     <div id = "response"></div>
-    <script src="../shared/thirdparty/es5-shim.min.js"></script>
-    <script src="../shared/thirdparty/es5-sham.min.js"></script>
-    <script src="../shared/thirdparty/console-polyfill.js"></script>
-    <script src="../../build/react.js"></script>
-    <script src="../../build/JSXTransformer.js"></script>
+    <script src="examples/shared/thirdparty/es5-shim.min.js"></script>
+    <script src="examples/shared/thirdparty/es5-sham.min.js"></script>
+    <script src="examples/shared/thirdparty/console-polyfill.js"></script>
+    <script src="build/react.js"></script>
+    <script src="build/JSXTransformer.js"></script>
     <script type="text/jsx" src="yelp.js"></script>
+
   </body>
 </html>
