--- a/react-0.11.1/examples/book/index.html
+++ b/react-0.11.1/examples/book/index.html
@@ -16,6 +16,7 @@
     <script src="../shared/thirdparty/console-polyfill.js"></script>
     <script src="../../build/react.js"></script>
     <script src="../../build/JSXTransformer.js"></script>
+    <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
     <script type="text/jsx" src="book_request.js"></script>
   </body>
 </html>
