--- a/react-0.11.1/examples/book/index.html
+++ b/react-0.11.1/examples/book/index.html
@@ -2,12 +2,24 @@
 <html>
   <head>
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
+    <link rel="stylesheet" type="text/css" href="../../../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../../bootstrap/img/glyphicons-halflings.png">
     <title>Coding Books</title>
   </head>
+  <style>
+    .upVoted{
+      background-color: red;
+    }
+    .notVoted{
+      background-color: gray;
+    }
+  </style>
   <body>
-    <h1>Books</h1>
-    <div id = "books"></div>
+    <div class = "container">
+      <h1>Books</h1>
 
+      <div id = "books" class= "span12"></div>
+    </div>
 
 
 
