--- a/react-0.11.1/examples/book/index.html
+++ b/react-0.11.1/examples/book/index.html
@@ -2,17 +2,22 @@
 <html>
   <head>
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
-    <link rel="stylesheet" type="text/css" href="../../../bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../../../bootstrap/img/glyphicons-halflings.png">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
     <title>Coding Books</title>
   </head>
   <style>
     .upVoted{
-      background-color: red;
+      color: black;
     }
-    .notVoted{
-      background-color: gray;
-    }
+
   </style>
   <body>
     <div class = "container">
